<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip1"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/white"
        android:paddingHorizontal="20dp"
        android:text="@string/skip_intro"
        android:textAllCaps="false"
        android:textColor="#0277bd"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:strokeColor="#0277bd"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/img_about_us"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_margin="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="#0277bd"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="49dp">

        <TextView
            android:id="@+id/txt_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_about_us_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/about_us_desc"
            android:textColor="#bdbdbd"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_about_us" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:indeterminateOnly="false"
            android:progress="50"
            android:progressDrawable="@drawable/progress_bar"
            android:secondaryProgress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id = "@+id/img_btn_about_us"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/arrow_circle_right"
            android:padding="40dp"
            app:layout_constraintBottom_toBottomOf="@id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
